crates/noaa-weather-cli/tests/summary/snapshots/noaa_weather_cli__summary_tests__products__location_collection_summary_snapshot.snap
---
source: crates/noaa-weather-cli/src/../tests/summary/products.rs
assertion_line: 39
expression: "locations.summarize(&SummaryOptions::default())"
---
title: NWS product locations
subtitle: 3 locations
emphasis: None
sections:
  - Table:
      heading: ~
      columns:
        - title: Location ID
          key: locations
          also: []
          align: Left
        - title: Location Name
          key: ~
          also: []
          align: Left
      rows:
        - - value:
              Identifier: "0"
            emphasis: None
          - value: Missing
            emphasis: None
        - - value:
              Identifier: ABQ
            emphasis: None
          - value:
              Text: "Albuquerque, NM"
            emphasis: None
        - - value:
              Identifier: PSR
            emphasis: None
          - value:
              Text: NWS Phoenix
            emphasis: None
notes: []
